[package]
name = "xfluencer"
version = "0.2.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "xfluencer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = {version = "0.29.0"}
spl-token = {version = "4.0.0", features = ["no-entrypoint"]}
bytemuck = "1.14.0"
u128 = "0.1.0"
strum = { version = "0.25", features = ["derive"] }
